[tool.poetry]
name = "PTAX-files-connection"
version = "4.2.0"
description = "This is the files connection"
authors = ["DTM <dan.attard@gmail.com>"]
readme = "README.md"
#packages = [{include = "src"}]

[tool.poetry.dependencies]
streamlit = "^1.22.0"
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
st-files-connection = "{ git = "https://github.com/streamlit/files-connection" }"
huggingface_hub = "^0.14.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
ipykernel = "^6.23.3"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"